Bug 164664 - [regression] unexpected highlightning in select elements
Summary: [regression] unexpected highlightning in select elements
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-22 14:52 UTC by Christophe Marin
Modified: 2008-09-17 16:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screencast (ogv) (891.10 KB, video/ogg)
2008-06-22 14:58 UTC, Christophe Marin
Details
Send move events to the correct widget (1.59 KB, patch)
2008-06-27 02:05 UTC, Rafael Fernández López
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2008-06-22 14:52:34 UTC
Version:           4.00.83 (KDE 4.0.83 (KDE 4.1 Beta2) (using 4.00.83 (KDE 4.0.83 (KDE 4.1 Beta2), compiled sources)
Compiler:          gcc-4.3
OS:                Linux (i686) release 2.6.25-2-486

Kdelibs revision. 823027.

I don't think I had this issue before this morning.

Testcase :

- Go to http://bugs.kde.org/show_bug.cgi?id=152797
- MouseHover the email addresses in the CC field
- The top entry gets a highlight (nothing in the CSS about that)

If working, i'm attaching a screencast :)
Comment 1 Christophe Marin 2008-06-22 14:58:34 UTC
Created attachment 25519 [details]
Screencast (ogv)

Screencast (ogg video)
Comment 2 FiNeX 2008-06-22 15:50:34 UTC
Confirmed using 822759.
Comment 3 Rafael Fernández López 2008-06-27 02:05:06 UTC
Created attachment 25637 [details]
Send move events to the correct widget

I have written this patch which sends the events to the correct widget.
Comment 4 Rafael Fernández López 2008-07-08 16:17:09 UTC
SVN commit 829449 by ereslibre:

Send mouse move events to the correct widget.

BUG: 164664


 M  +8 -6      render_replaced.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=829449
Comment 5 Germain Garand 2008-07-09 05:17:59 UTC
SVN commit 829767 by ggarand:

another late one ;-/

Have to revert r829449 for now, as it breaks selection in iframes.
My bad for reviewing it so late it couldn't be properly tested.

CCBUG: 164664
CCMAIL: ereslibre@kde.org

 M  +6 -8      render_replaced.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=829767
Comment 6 Rafael Fernández López 2008-07-09 12:25:59 UTC
Reopen bug, since the commit has been reverted.
Comment 7 Rafael Fernández López 2008-09-17 16:54:26 UTC
Revision 861919 on trunk should fix this problem. Backporting.