Send mouse move events to the correct widget.

BUG: 164664

svn path=/trunk/KDE/kdelibs/; revision=829449